Refactored, reformatted and applied fixes for inspections proposed by IntelliJ Idea